feat: 调整文件上传参数，以及错误处理
