# app/router/r_api.go
@@ -19,7 +19,7 @@ func (a *Router) RegisterAPI(app *gin.Engine) {
 		gFiles := v1.Group("files")
 		{
 			gFiles.GET(":fileName", a.FileAPI.Get)
-			gFiles.POST("", a.FileAPI.Upload)
+			gFiles.POST(":fileName", a.FileAPI.Upload)
 			gFiles.DELETE(":fileName", a.FileAPI.Delete)
 		}
 
